# gnome-battery-bench

./: .editorconfig  meson.build
data/: meson.build
docs/: gbb.txt  meson.build
src/: meson.build  system-info.c
tests/: meson.build
